src/test/ui/keyword/keyword-true-as-identifier.stderr
error[E0308]: mismatched types
  --> $DIR/keyword-true-as-identifier.rs:2:9
   |
LL |     let true = 22;
   |         ^^^^ expected integer, found bool
   |
   = note: expected type `{integer}`
              found type `bool`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
